#AKDN-1295 Fix scrollbar overlap on menubar

--- a/docroot/sites/akdn/themes/akdn/css/styles.css
+++ b/docroot/sites/akdn/themes/akdn/css/styles.css
@@ -646,8 +646,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url(../fonts/bootstrap/glyphicons-halflings-regular.eot?1463461146);
-  src: url(../fonts/bootstrap/glyphicons-halflings-regular.eot?&1463461146#iefix) format("embedded-opentype"), url(../fonts/bootstrap/glyphicons-halflings-regular.woff2?1463461146) format("woff2"), url(../fonts/bootstrap/glyphicons-halflings-regular.woff?1463461146) format("woff"), url(../fonts/bootstrap/glyphicons-halflings-regular.ttf?1463461146) format("truetype"), url(../fonts/bootstrap/glyphicons-halflings-regular.svg?1463461146#glyphicons_halflingsregular) format("svg");
+  src: url(../fonts/bootstrap/glyphicons-halflings-regular.eot?1458165161);
+  src: url(../fonts/bootstrap/glyphicons-halflings-regular.eot?&1458165161#iefix) format("embedded-opentype"), url(../fonts/bootstrap/glyphicons-halflings-regular.woff2?1458165161) format("woff2"), url(../fonts/bootstrap/glyphicons-halflings-regular.woff?1458165161) format("woff"), url(../fonts/bootstrap/glyphicons-halflings-regular.ttf?1458165161) format("truetype"), url(../fonts/bootstrap/glyphicons-halflings-regular.svg?1458165161#glyphicons_halflingsregular) format("svg");
 }
 /* line 24, ../sass/sass-extensions/bootstrap/_glyphicons.scss */
 .glyphicon, .location-links h2 .nolink:after, .location-links h2 a:after {
@@ -10778,7 +10778,7 @@ button.close {
   line-height: 1;
   margin: 8px 1px 0 0;
   color: #b2b2b2;
-  background: #fff url('../images/magnifier.png?1463461146') no-repeat;
+  background: #fff url('../images/magnifier.png?1458165161') no-repeat;
   background-size: contain;
   border-radius: 0;
   border: 0 none;
@@ -11520,7 +11520,7 @@ h1.title {
   padding: 0;
   font-size: 0;
   line-height: 1;
-  background: url('../images/instagram.png?1463461146') no-repeat;
+  background: url('../images/instagram.png?1458165161') no-repeat;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
@@ -12121,32 +12121,32 @@ h1.title {
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .facebook {
-  background: url('../images/facebook.png?1463461146') no-repeat;
+  background: url('../images/facebook.png?1458165161') no-repeat;
 }
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .twitter {
-  background: url('../images/twitter.png?1463461146') no-repeat;
+  background: url('../images/twitter.png?1458165161') no-repeat;
 }
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .youtube {
-  background: url('../images/youtube.png?1463461146') no-repeat;
+  background: url('../images/youtube.png?1458165161') no-repeat;
 }
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .instagram {
-  background: url('../images/instagram.png?1463461146') no-repeat;
+  background: url('../images/instagram.png?1458165161') no-repeat;
 }
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .vimeo {
-  background: url('../images/vimeo.png?1463461146') no-repeat;
+  background: url('../images/vimeo.png?1458165161') no-repeat;
 }
 
 /* line 1345, ../sass/_akdn-redesign.scss */
 .akmi {
-  background: url('../images/akmi.png?1463461146') no-repeat;
+  background: url('../images/akmi.png?1458165161') no-repeat;
 }
 
 /* line 1349, ../sass/_akdn-redesign.scss */
@@ -12507,12 +12507,12 @@ h1.title {
   height: 22px;
   margin: 0 auto;
   padding: 0;
-  background: url('../images/arrow-bottom.png?1463461146') no-repeat;
+  background: url('../images/arrow-bottom.png?1458165161') no-repeat;
 }
 /* line 1683, ../sass/_akdn-redesign.scss */
 .akdn-filter-show-hide h2.active:after {
   content: "";
-  background: url('../images/arrow-top.png?1463461146') no-repeat;
+  background: url('../images/arrow-top.png?1458165161') no-repeat;
 }
 
 /* line 1689, ../sass/_akdn-redesign.scss */
@@ -13301,12 +13301,12 @@ ul.primary li {
   height: 22px;
   margin: 0 auto;
   padding: 0;
-  background: url('../images/arrow-bottom.png?1463461146') no-repeat;
+  background: url('../images/arrow-bottom.png?1458165161') no-repeat;
 }
 /* line 2381, ../sass/_akdn-redesign.scss */
 .page-search .akdn-filter-show-hide h2.active:after {
   content: "";
-  background: url('../images/arrow-top.png?1463461146') no-repeat;
+  background: url('../images/arrow-top.png?1458165161') no-repeat;
 }
 /* line 2387, ../sass/_akdn-redesign.scss */
 .page-search .akdn-filter-js-wrapper {
@@ -13512,7 +13512,7 @@ ul.primary li {
   font-size: 0;
   text-transform: uppercase;
   border: 0 none;
-  background: url('../images/submit.png?1463461146') 0 0 no-repeat;
+  background: url('../images/submit.png?1458165161') 0 0 no-repeat;
 }
 /* line 2559, ../sass/_akdn-redesign.scss */
 .node-webform .webform-client-form .form-actions input.form-submit:focus {
@@ -13597,7 +13597,7 @@ ul.primary li {
 .node-webform .webform-subscribe .form-actions input.form-submit {
   width: 180px;
   margin-left: 0 !important;
-  background: url('../images/subscribe.png?1463461146') 0 0 no-repeat;
+  background: url('../images/subscribe.png?1458165161') 0 0 no-repeat;
 }
 
 /* line 2644, ../sass/_akdn-redesign.scss */
@@ -13767,7 +13767,7 @@ h2.header-name a:active, h2.header-name a:focus {
 .geography-page .country-activity-tile .hub-pages-row .country_activity_link a,
 .node-type-agency .country-activity-tile .hub-pages-row .country_activity_link a {
   position: absolute;
-  background: url('../images/arrows.png?1463461146') 0 -30px no-repeat;
+  background: url('../images/arrows.png?1458165161') 0 -30px no-repeat;
   width: 26px;
   height: 26px;
   font-size: 0;
@@ -14255,7 +14255,7 @@ h2.header-name a:active, h2.header-name a:focus {
   height: 24px;
   margin-top: -2px;
   margin-left: 5px;
-  background: url('../images/download-icon.jpg?1463461146') 0 0 no-repeat;
+  background: url('../images/download-icon.jpg?1458165161') 0 0 no-repeat;
   background-size: contain;
 }
 /* line 3245, ../sass/_akdn-redesign.scss */
@@ -16358,12 +16358,12 @@ map area {
   height: 22px;
   margin: 0 auto;
   padding: 0;
-  background: url('../images/arrow-bottom.png?1463461146') no-repeat;
+  background: url('../images/arrow-bottom.png?1458165161') no-repeat;
 }
 /* line 5259, ../sass/_akdn-redesign.scss */
 .akaa-projectfinder-wrapper .pane-title.active:after, .akaa-projectfinder-wrapper .block-title.active:after {
   content: "";
-  background: url('../images/arrow-top.png?1463461146') no-repeat;
+  background: url('../images/arrow-top.png?1458165161') no-repeat;
 }
 /* line 5264, ../sass/_akdn-redesign.scss */
 .akaa-projectfinder-wrapper .pane-content, .akaa-projectfinder-wrapper .content {
@@ -16622,7 +16622,7 @@ map area {
   height: 26px;
   font-size: 0;
   cursor: pointer;
-  background: url('../images/arrows.png?1463461146') 0 -60px no-repeat;
+  background: url('../images/arrows.png?1458165161') 0 -60px no-repeat;
 }
 /* line 5500, ../sass/_akdn-redesign.scss */
 .akaa-award-cycle-block-short-video .views-field-nothing .play-video a:hover, .akaa-award-cycle-block-short-video .views-field-nothing .play-video a:focus {
@@ -16680,7 +16680,7 @@ map area {
   height: 26px;
   font-size: 0;
   cursor: pointer;
-  background: url('../images/arrows.png?1463461146') 0 -30px no-repeat;
+  background: url('../images/arrows.png?1458165161') 0 -30px no-repeat;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -18674,7 +18674,7 @@ map area {
 .akdn-logo-wrap {
   width: 120px;
   height: 55px;
-  background: url('../images/akdn-logo.png?1463461146') no-repeat;
+  background: url('../images/akdn-logo.png?1458165161') no-repeat;
 }
 
 /* Projects Lightbox captions */
@@ -18745,6 +18745,11 @@ map area {
 /* line 7369, ../sass/_akdn-redesign.scss */
 .main-navbar .menu-block-wrapper > ul.menu > li:nth-of-type(4) > ul.menu > li:nth-of-type(3) {
   white-space: nowrap;
+}
+
+/* line 7379, ../sass/_akdn-redesign.scss */
+.mCSB_scrollTools .mCSB_dragger {
+  z-index: 0 !important;
 }
 
 /*
