--- a/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
@@ -7374,3 +7374,8 @@ map {
         }
     }
 }
+
+// Scrollbar overlap on menubar
+.mCSB_scrollTools .mCSB_dragger {
+  z-index: 0 !important;
+}
